@@ -2,6 +2,7 @@
 
 == 0.0.4 (...)
 * Better overview link in edit mode
+* Add export of current offset
 
 == 0.0.3 (2011-05-16)
 * CouchI18n.import_from_yaml does not underscore the keys anymore
